Made layout responsive for mobile viewports

--- a/website/PCD-website-2020/StaticSite/public/index.html
+++ b/website/PCD-website-2020/StaticSite/public/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PCD Delhi 2020 | Homepage </title>
     <link rel="alternate" type="application/atom+xml" href=".//?/feed/">
     <link rel="stylesheet" href="screen.css" type="text/css" media="screen">
@@ -28,12 +29,21 @@
         visibility: visible;
       }
 
+      .reg {
+        float: right;
+      }
+
+      .sch {
+        min-height: 420px;
+      }
+
       .reg p {
         font-size: 13px;
       }
 
       #container {
         min-height: 42px;
+        max-width: 820px;
       }
 
       .logo-image {
@@ -54,6 +64,7 @@
         padding: 5px 20px;
         text-align: left;
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("images/SAT.png");
+        max-width: 820px;
         width: 100%;
         height: 20%;
         background-position: center;
@@ -66,8 +77,8 @@
         margin: 0px auto;
         padding: 5px 20px;
         text-align: left;
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("images/venue-info-bg.jpg");
-        height: 50%;
+        float: left;
+        margin-left: 0;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -130,11 +141,116 @@
         flex-wrap:wrap;
         align-items:center;
       }
+
+      .maincontent{
+        margin: 0px auto;
+        padding: 5px 20px;
+        text-align: left;
+        max-width: 820px;
+      }
+
+      .opencall {
+        width: auto;
+      }
+
+      .opencall .col {
+        margin: 0px 0px 0px 20px;
+      }
+
+      .theme {
+        width: 60%;
+      }
+
+      .theme span {
+          padding: 0 10px;
+          float: none;
+      }
+
+      @media (max-width: 576px){
+        .hero-image {
+          padding: 0px;
+        }
+
+        .reg {
+          float: left;
+          margin-top: 20px;
+        }
+
+        .venue-image{
+          padding: 0px;
+          width: 100%;
+        }
+
+        .eight {
+          width: 100%;
+        }
+
+        .opencall{
+          width: 100%;
+        }
+
+        .opencall .col{
+          float: none;
+          padding-top: 100px;
+          margin: auto;
+        }
+
+        .sch {
+          width: 100%;
+          margin: 0px 50px 0px 0px;
+        }
+
+        .theme span {
+          text-align: left;
+          float: left;
+        }
+      }
+
+      @media (max-width: 780px){
+        .hero-image {
+          padding: 0px;
+        }
+
+        .reg {
+          float: left;
+          margin-top: 20px;
+        }
+
+        .venue-image{
+          padding: 0px;
+          width: 95%;
+        }
+
+        .eight {
+          width: 100%;
+        }
+
+        .opencall{
+          width: 100%;
+        }
+
+        .opencall .col{
+          padding-top: 100px;
+        }
+
+        .sch {
+          width: 340px;
+        }
+
+        .theme {
+          width: 80%;
+        }
+
+        .theme span {
+          padding: 0 10px;
+          float: none;
+        }
+      }
     </style>
   </head>
   <body>
 
-    <div id="container">
+    <div id="container" style="width: 100%;">
 
         <hr>
 
@@ -173,7 +289,7 @@
     <hr>
     <hr>
     <hr>
-    <div style = "margin: 0px auto;width: 860px;padding: 5px 20px;text-align: left;">
+    <div class="maincontent">
 
       <!-- INTO + HEADING -->
       <h1 style="font-size:32px;float: left;"> Processing Community Day</h1>
@@ -184,7 +300,8 @@
 
       <!-- EVENT + VENUE -->
       <hr class="dotted">
-      <div class="reg col three" style="float: right;margin-top: -20px;">
+      <img class="venue-image col seven" src="images/venue-info-bg.jpg"></img>
+      <div class="reg col three">
         <h1 style="font-size:21px; margin-bottom: 4px;">Where</h1>
         <p style="font-size: 14px;">CSIR-IGIB (South Campus)</p>
         <h1 style="font-size:21px; margin-bottom: 4px;">Time</h1>
@@ -198,50 +315,69 @@
       </div>
 
 
-      <div class="col eight"  style="float: left; margin-left: 0; height: 300px;">
-         <div class="venue-image" src="images/venue-info-bg.jpg" style="height: 300px;"></div>
-      </div>
-
       <!-- OPENCALL -->
       <hr>
       <hr class="dotted">
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center" style="width: 128px; height: 128px; clip-path: polygon(50% 0%, 0% 100%, 100% 100%); background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>Talk about your work, concept, research or other bits related to the theme of PCD 2020. The talk would be not more than 25 minutes and can include a QnA from the audience.</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/172l1Xve6g0kq75DK4QiIuhr0ou1UgXiHvyHkId1G5a0/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+      <div class="opencall center">
+        <div class="col three" style="text-align: center;">
+          <div class="center" style="width: 128px;height: 128px; -webkit-clip-path: url(#talks-clip-path); clip-path: url(#talks-clip-path);background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+            <clipPath id="talks-clip-path" clipPathUnits="objectBoundingBox">
+              <path d="M0.5,0 L1,1 H0"></path>
+            </clipPath>
+          </svg>
+          <hr>
+          <hr>
+          <h2>Talks</h2>
+          <hr>
+          <hr>
+          <p>Talk about your work, concept, research or other bits related to the theme of PCD 2020. The talk would be not more than 25 minutes and can include a QnA from the audience.</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/172l1Xve6g0kq75DK4QiIuhr0ou1UgXiHvyHkId1G5a0/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center"  style="width: 128px; height: 128px; background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>We are conducting an hour- long workshop to breakdown few concepts for you and how to work with code. Fill in the form if you’re interested in taking the workshop which is on the theme of PCD 2020.</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/1gO_Hgzxz0Cbp_7QDdirPtqLlKmrX1F3NvXCosKnlDKU/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+        <div class="col three" style="text-align: center;">
+          <div class="center"  style="width: 128px; height: 128px; background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+          </svg>
+          <hr>
+          <hr>
+          <h2>Workshops</h2>
+          <hr>
+          <hr>
+          <p>We are conducting an hour- long workshop to breakdown few concepts for you and how to work with code. Fill in the form if you’re interested in taking the workshop which is on the theme of PCD 2020.</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/1gO_Hgzxz0Cbp_7QDdirPtqLlKmrX1F3NvXCosKnlDKU/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center"  style="width: 128px; height: 128px; clip-path: circle(50% at 50% 50%); background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>If you’re a student, a practicioner, or have a fun gadget or a project to showcase, we have space for you. Tell us what you’ll need and we will help in installing it for you.</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeROo7WArxJJ_euqQ5JupN3vga_vzkQb72szqCjbot3DG7Bzw/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+        <div class="col three" style="text-align: center;">
+          <div class="center"  style="width: 128px; height: 128px; -webkit-clip-path: url(#showcase-clip-path); clip-path: url(#showcase-clip-path); background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+            <clipPath id="showcase-clip-path" clipPathUnits="objectBoundingBox">
+              <path d="M0.5,0.5 m-0.5,0 a0.5,0.5,0,1,0,1,0 a0.5,0.5,0,1,0,-1,0"></path>
+            </clipPath>
+          </svg>
+          <hr>
+          <hr>
+          <h2>Showcase</h2>
+          <hr>
+          <hr>
+          <p>If you’re a student, a practicioner, or have a fun gadget or a project to showcase, we have space for you. Tell us what you’ll need and we will help in installing it for you.</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeROo7WArxJJ_euqQ5JupN3vga_vzkQb72szqCjbot3DG7Bzw/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -255,17 +391,15 @@
         <div class="center" style="text-align:center;"><button disabled><h2>Get Tickets</h2></button><hr style="margin-bottom: 10px;"><p style="font-size: 12px;">Opens on 26th December</p></div>
       </div>
 
-
       <!-- THEME-->
       <hr>
       <hr class="dotted">
       <hr>
-      <div style="background: #6C00B3; color: #FFF; padding: 50px 0; text-align: center;">
-        <h3>/* Theme for PCD 2020 */</h3>
+      <div class="col five" style=" width: 95%; margin: 0; margin-left: 2%; background: #6C00B3; color: #FFF; padding: 50px 0; text-align: center;">
+        <h3>/* Themes for PCD 2020 */</h3>
         <br>
-        <p>//Evolutionary Algorithm //Computation Art (Art and Code) <br>//Ethics and AI //Tool building //Data Visualisation <br>//Community Led technologies</p>
+        <div class="theme center"><span class="col three">// Evolutionary Algorithm</span><span class="col three">// Computation Art</span><br><span class="col three">// Ethics and AI</span><span class="col three">// Tool building</span><span class="col three">// Data Visualisation</span><br><span class="col three">// Community Led technologies</span></div>
       </div>
-
 
       <!-- Schedule -->
       <hr>
@@ -275,24 +409,27 @@
         <div style="display: inline-block; float: left;"><h2>Program Schedule</h2></div>
         <div style="display: inline-block; float: right;"><p style="padding-top: 10px;">01/02 Feb</p></div>
         <hr style="margin-bottom: 16px;">
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day One First half</h3>
-          <p style="padding: 8px 16px;">9:00 am<br>Introduction<br><br>10:00 am<br>Talk (Two speakers)<br><br>11:00 am<br>Workshop - Breakdown of two Concepts Orientation - Introducing Themes<br><br>12:00 pm<br>Forming Groups on PCD 2020 themes<br><br>1:00 pm<br>Break for Lunch</p>
+          <p style="padding: 8px 16px;">9:00 am<br>Introduction<br><br>10:00 am<br>Talk (Two speakers)<br><br>11:00 am<br>Workshop - Breakdown of two Concepts<br>Orientation - Introducing Themes<br><br>12:00 pm<br>Forming Groups on PCD 2020 themes<br><br>1:00 pm<br>Break for Lunch</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day One Second half</h3>
-          <p style="padding: 8px 16px;">Extended Workshop<br><br>2:00 pm<br>Focus Group discussions<br><br>5:00 pm<br>Mentoring Sessions<br><br>7:00 pm Break for Tea Performances</p>
+          <p style="padding: 8px 16px;">Extended Workshop<br><br>2:00 pm<br>Focus Group discussions<br><br>5:00 pm<br>Mentoring Sessions<br><br>7:00 pm<br>Break for Tea & Performances</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day Two First half</h3>
-          <p style="padding: 8px 16px;">9:00 am<br>Problem Solving Session<br><br>10:00 am<br>Talk (Two Speakers)<br><br>11:00 am Workshop<br><br>1:00 pm<br>Break for Lunch</p>
+          <p style="padding: 8px 16px;">9:00 am<br>Problem Solving Session<br><br>10:00 am<br>Talk (Two Speakers)<br><br>11:00 am<br>Workshop<br><br>1:00 pm<br>Break for Lunch</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day Two Second half</h3>
-          <p style="padding: 8px 16px;">2:00 pm<br>Focus Group continues<br><br>5:00 pm<br>Open-Community Discussion<br><br>6:00 pm<br>Making a Repository of the Collective Work (Google form)<br><br>7:00 pm<br>Wrap up and Group Pictures</p>
+          <p style="padding: 8px 16px;">2:00 pm<br>Focus Group continues<br><br>5:00 pm<br>Open-Community Discussion<br><br>6:00 pm<br>Making a Repository of the Collective Work<br>(Google form)<br><br>7:00 pm<br>Wrap up and Group Pictures</p>
         </div>
       </div>
       <hr class="dotted">
+      <footer>
+        <a href="mailto:pcddelhi@gmail.com" target="_blank" style="cursor: pointer;">Contact Us</a>
+      </footer>
 
     </div>
     <hr>
